samples/_failures_safe/1761321257_81571a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_05cb09f1.c: In function ‘tokenize’:
./samples/SAFE/__tmp_05cb09f1.c:174:17: error: expected declaration or statement at end of input
  174 |                 pos++;
      |                 ^~~
./samples/SAFE/__tmp_05cb09f1.c:174:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_05cb09f1.c:174:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_05cb09f1.c:174:17: error: expected declaration or statement at end of input
